--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,16 +30,23 @@ android {
     buildFeatures{
         viewBinding = true
     }
+
+    configurations.all {
+        resolutionStrategy {
+            force 'androidx.annotation:annotation-jvm:1.8.2'
+        }
+    }
 }
+
+
 
 dependencies {
 
     implementation libs.appcompat
     implementation libs.material
-    implementation libs.activity
-    implementation libs.constraintlayout
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation project(":guide")
+
 }
